# md-to-pdf

./: .gitignore  README.md  example_config.py  pyproject.toml
docs/: conf.py  index.md
scripts/: md_to_pdf
src/md_to_pdf/: __init__.py  __main__.py  cli.py  config.py  config_example.py  converter.py  fonts.py  utils.py  watcher.py
tests/: test_converter.py  test_japanese.py  test_watcher.py
tests/fixtures/: japanese_sample.md  sample.md
