[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-to-pdf"
version = "0.1.0"
description = "Automatically convert Markdown files to PDF"
readme = "README.md"
requires-python = ">=3.8,<4.0.0"
license = {text = "MIT"}
dependencies = [
    "sphinx>=4.0.0",
    "myst-parser>=0.15.0",  # For Markdown support in Sphinx
    "watchdog>=2.1.0",      # For file system monitoring
    "click>=8.0.0",         # For CLI interface
    "rinohtype>=0.5.5",     # For PDF generation without LaTeX
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]

[project.scripts]
md-to-pdf = "md_to_pdf.cli:main"
